--- a/src/main/webapp/static/styles/order.css
+++ b/src/main/webapp/static/styles/order.css
@@ -3,3 +3,26 @@
     width: 100%;
     height: 100%;
 }
+.page-info{
+    padding-left: 50%;
+    padding-top:90px;
+}
+#table td{
+    padding: 30px;
+    border: 1px solid black;
+}
+#pagination {
+    display: flex;
+    padding-left: 60px;
+    list-style-type: none;
+}
+#pagination li{
+    margin-right: 5px;
+    padding: 10px;
+    border: 1px solid black;
+}
+#pagination li:hover,#pagination li.active{
+    cursor: pointer;
+    color: red;
+    border: 1px solid red;
+}
