--- a/src/main/webapp/static/styles/order.css
+++ b/src/main/webapp/static/styles/order.css
@@ -4,25 +4,29 @@
     height: 100%;
 }
 .page-info{
-    padding-left: 50%;
-    padding-top:90px;
+    padding-left: 25%;
+    padding-top:20px;
 }
 #table td{
-    padding: 30px;
-    border: 1px solid black;
+    padding: 37px;
+    border: 1px solid #316dba;
 }
 #pagination {
     display: flex;
-    padding-left: 60px;
+    padding-left: 25%;
     list-style-type: none;
 }
 #pagination li{
     margin-right: 5px;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid #316dba;
 }
 #pagination li:hover,#pagination li.active{
     cursor: pointer;
     color: red;
     border: 1px solid red;
+}
+.text{
+    font-size: 20px;
+    font-style: italic;
 }
